--- a/Card_Credit_Fraud/notebook.ipynb
+++ b/Card_Credit_Fraud/notebook.ipynb
@@ -1501,7 +1501,7 @@
    ],
    "source": [
     "vanilla.compile(\n",
-    "    loss=\"binary_crossentropy\", metrics=[\"accuracy\", \"Precision\", \"Recall\"], optimizer=\"adam\"\n",
+    "    loss=\"binary_crossentropy\", metrics=[\"accuracy\", \"Precision\", \"Recall\"]\n",
     ")\n",
     "\n",
     "vanilla_train = vanilla.fit(\n",
